[package]
name = "AdventOfCode"
version = "1.0.0"

[profile.dev]
opt-level = 3

[dependencies]
regex = "1"
lazy_static = "1"
anyhow= "1"

[[bin]]
name = "day1"
path = "day1/day1.rs"

[[bin]]
name = "day2"
path = "day2/day2.rs"

[[bin]]
name = "day3"
path = "day3/day3.rs"

[[bin]]
name = "day4"
path = "day4/day4.rs"

[[bin]]
name = "day5"
path = "day5/day5.rs"

[[bin]]
name = "day6"
path = "day6/day6.rs"

[[bin]]
name = "day7"
path = "day7/day7.rs"

[[bin]]
name = "day8"
path = "day8/day8.rs"

[[bin]]
name = "day9"
path = "day9/day9.rs"

[[bin]]
name = "day10"
path = "day10/day10.rs"

[[bin]]
name = "day11"
path = "day11/day11.rs"

[[bin]]
name = "day12"
path = "day12/day12.rs"

[[bin]]
name = "day13"
path = "day13/day13.rs"

[[bin]]
name = "day14"
path = "day14/day14.rs"

[[bin]]
name = "day15"
path = "day15/day15.rs"
